<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/bgpicfi"
    tools:context="com.example.mike4christ.medmanager.EditProfileActivity">

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_profile_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textColorHint="#ffffff"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_profile_country"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="12sp"
        android:textColorHint="#ffffff"
        android:layout_marginTop="16dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_profile_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="12sp"
       android:textColorHint="#ffffff"
        android:layout_marginTop="8dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_hobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_profile_hobby"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="12sp"
        android:textColorHint="#ffffff"
        android:layout_marginTop="8dp"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/profile_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="12sp"
            android:textColorHint="#ffffff"
            android:layout_marginTop="8dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/profile_birth_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_date"
            android:background="@drawable/roundededit"
            android:layout_weight="3"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        android:text="@string/save_edit"
        android:background="@drawable/roundededit"
        android:padding="12dp"/>


</LinearLayout>
