<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bgpicfi"
    tools:context="com.example.mike4christ.medmanager.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:contentDescription="mylogo"
        android:src="@drawable/medical_logo"/>


    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:text="@string/no_text"
        android:padding="8dp"
        android:layout_marginTop="56dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColorHint="#ffffff"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:layout_below="@+id/login_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="#ffffff"
        android:maxLines="1"
        android:padding="12dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_button"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:textStyle="bold"
        android:background="@drawable/roundededit"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/log_in"
        android:background="@drawable/roundededit"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
